--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>💌Mail Client - Учебный проект</title>
+    <title>Mail Client - Учебный проект</title>
     <!-- Bootstrap 5 CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -373,7 +373,7 @@
 
                 <!-- Кнопки действий -->
                 <div class="d-flex gap-2">
-                  <button class="btn btn-primary">
+                  <!-- <button class="btn btn-primary">
                     <i class="bi bi-reply me-1"></i> Ответить
                   </button>
                   <button class="btn btn-outline-primary">
@@ -385,6 +385,7 @@
                   <button class="btn btn-outline-danger ms-auto">
                     <i class="bi bi-trash me-1"></i> Удалить
                   </button>
+                  -->
                 </div>
               </div>
             </div>
@@ -401,6 +402,7 @@
                   <input
                     type="email"
                     class="form-control"
+                    id="new-to-email"
                     placeholder="email@example.com"
                     required
                   />
@@ -410,6 +412,7 @@
                   <input
                     type="text"
                     class="form-control"
+                    id="new-subject"
                     placeholder="Тема письма"
                     required
                   />
@@ -419,12 +422,14 @@
                   <textarea
                     class="form-control"
                     rows="5"
+                    id="new-body"
                     placeholder="Начните писать здесь..."
                     required
                   ></textarea>
                 </div>
                 <div class="d-flex gap-2">
-                  <button type="submit" class="btn btn-success">
+                  <button type="submit" class="btn btn-success" 
+                    id="send-letter-btn">
                     <i class="bi bi-send me-1"></i>Отправить
                   </button>
                   <button
@@ -459,8 +464,7 @@
             </p>
             <small class="text-muted"
               >Специальность: 09.02.07 Информационные системы и
-              программирование<br />
-              Зиганшина и Галинурова</small
+              программирование</small
             >
           </div>
           <div class="col-md-6 text-md-end">
@@ -481,8 +485,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Подключение модулей -->
-    <script type="module" src="js/config.js"></script>
-    <script type="module" src="js/api.js"></script>
-    <script type="module" src="js/app.js"></script>
+     <!-- День8 (добавили defer для не критичных) -->
+    <script type="module" src="js/config.js" defer></script>
+    <script type="module" src="js/api.js" defer></script>
+    <script type="module" src="js/app.js" defer></script>
   </body>
 </html>
